# embedding-model-evaluator

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/modules/: file.py  query.py
app/routes/: views.py
app/utils/: utils.py
